--- a/Marcus/.vscode/launch.json
+++ b/Marcus/.vscode/launch.json
@@ -2,6 +2,20 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "java",
+      "name": "LabAssignment5Part1",
+      "request": "launch",
+      "mainClass": "LabAssignment5Part1",
+      "projectName": "Marcus_f4a82219"
+    },
+    {
+      "type": "java",
+      "name": "LabAssignment5Part2",
+      "request": "launch",
+      "mainClass": "LabAssignment5Part2",
+      "projectName": "Marcus_f4a82219"
+    },
+    {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
